# desknote

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
assets/: note-settings.desktop
assets/style/: settings.css  shell.css
configs/: gpu.conf.example
configs/greetd/: config.toml  note-greet.css
configs/labwc/: autostart  environment  menu.xml  rc.xml  shutdown  themerc-override
configs/mako/: config
configs/wayland-session/: note.desktop
configs/wofi/: config  style.css
crates/note-core/: Cargo.toml
crates/note-core/src/: config.rs  i18n.rs  (+3 more)
crates/note-settings/: Cargo.toml
crates/note-shell/: Cargo.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  PACKAGING.md  ROADMAP.md  VALIDATION.md
locales/de-DE/: shell.ftl
locales/en-US/: shell.ftl
locales/es-MX/: shell.ftl
locales/fr-FR/: shell.ftl
locales/pt-BR/: shell.ftl
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/rpm/: note-desktop.spec
scripts/: build-deb.sh  install-files.sh  install.sh  make-release.sh  note-apply-settings  note-audio  note-autostart  note-browser  note-control-center  note-doctor  note-editor  note-files  note-greeter-session  note-launcher  note-lock  note-logout  note-network  note-nvidia-kms  note-overview  note-reboot  note-screenshot  note-session  note-session-inner  note-terminal  note-test-from-tty  note-workspace  patch-0.2.1-build.sh  preflight.sh  repair-apt.sh  test-from-tty.sh  uninstall.sh
systemd/user/: note-notifications.service  note-polkit-agent.service  note-session.target  note-shell.service
(+3 files in other folders)
